--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 
     implementation 'com.airbnb.android:lottie:2.5.4'
 
+    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
 
     implementation 'com.google.firebase:firebase-auth:15.0.0'
     implementation 'com.google.android.gms:play-services-auth:15.0.0'
