Home Work 28.05.2018 Test Implementation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,18 +31,23 @@ dependencies {
 
     implementation 'com.facebook.android:facebook-android-sdk:4.32.0'
 
-    implementation 'com.google.firebase:firebase-auth:15.1.0'
+    implementation 'com.google.firebase:firebase-auth:16.0.1'
     implementation 'com.google.android.gms:play-services-auth:15.0.1'
-    implementation 'com.google.firebase:firebase-firestore:16.0.0'
-    implementation 'com.google.firebase:firebase-messaging:15.0.2'
+    implementation 'com.google.firebase:firebase-firestore:17.0.1'
+    implementation 'com.google.firebase:firebase-messaging:17.0.0'
 
     implementation 'com.android.support:support-v4:27.1.1'
 
     implementation 'de.hdodenhof:circleimageview:2.1.0'
 
     testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:1.10.19'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
+
+
 
 }
 
